Made a few changes

--- a/index.html
+++ b/index.html
@@ -55,6 +55,78 @@
                               <small class="card-text">CNN Indonesia</small>
                          </div>
                     </div>
+                    <div class="news-card">
+                         <div class="news-image"></div>
+                         <div class="news-card-title">
+                              <h2 class="title-text">News Title Lorem Ipsum Dolor Sit Amet</h2>
+                         </div>
+                         <div class="news-card-timeline">
+                              <small class="card-text">1 Hour Ago</small>
+                              <small class="card-text">CNN Indonesia</small>
+                         </div>
+                    </div>
+                    <div class="news-card">
+                         <div class="news-image"></div>
+                         <div class="news-card-title">
+                              <h2 class="title-text">News Title Lorem Ipsum Dolor Sit Amet</h2>
+                         </div>
+                         <div class="news-card-timeline">
+                              <small class="card-text">1 Hour Ago</small>
+                              <small class="card-text">CNN Indonesia</small>
+                         </div>
+                    </div>
+                    <div class="news-card">
+                         <div class="news-image"></div>
+                         <div class="news-card-title">
+                              <h2 class="title-text">News Title Lorem Ipsum Dolor Sit Amet</h2>
+                         </div>
+                         <div class="news-card-timeline">
+                              <small class="card-text">1 Hour Ago</small>
+                              <small class="card-text">CNN Indonesia</small>
+                         </div>
+                    </div>
+               </div>
+               <div class="news-card-box">
+                    <div class="news-card">
+                         <div class="news-image"></div>
+                         <div class="news-card-title">
+                              <h2 class="title-text">News Title Lorem Ipsum Dolor Sit Amet</h2>
+                         </div>
+                         <div class="news-card-timeline">
+                              <small class="card-text">1 Hour Ago</small>
+                              <small class="card-text">CNN Indonesia</small>
+                         </div>
+                    </div>
+                    <div class="news-card">
+                         <div class="news-image"></div>
+                         <div class="news-card-title">
+                              <h2 class="title-text">News Title Lorem Ipsum Dolor Sit Amet</h2>
+                         </div>
+                         <div class="news-card-timeline">
+                              <small class="card-text">1 Hour Ago</small>
+                              <small class="card-text">CNN Indonesia</small>
+                         </div>
+                    </div>
+                    <div class="news-card">
+                         <div class="news-image"></div>
+                         <div class="news-card-title">
+                              <h2 class="title-text">News Title Lorem Ipsum Dolor Sit Amet</h2>
+                         </div>
+                         <div class="news-card-timeline">
+                              <small class="card-text">1 Hour Ago</small>
+                              <small class="card-text">CNN Indonesia</small>
+                         </div>
+                    </div>
+                    <div class="news-card">
+                         <div class="news-image"></div>
+                         <div class="news-card-title">
+                              <h2 class="title-text">News Title Lorem Ipsum Dolor Sit Amet</h2>
+                         </div>
+                         <div class="news-card-timeline">
+                              <small class="card-text">1 Hour Ago</small>
+                              <small class="card-text">CNN Indonesia</small>
+                         </div>
+                    </div>
                </div>
           </section>
      </main>
