Had to fix a few things

--- a/index.html
+++ b/index.html
@@ -44,9 +44,19 @@
                <div class="news-heading">
                     <h1 class="latest-news">Latest News</h1>
                </div>
-               <div class="news-card-box">
+               <div class="news-card-group">
                     <div class="news-card">
                          <div class="news-image"></div>
+                         <div class="news-card-title">
+                              <h2 class="title-text">News Title Lorem Ipsum Dolor Sit Amet</h2>
+                         </div>
+                         <div class="news-card-timeline">
+                              <small class="card-text">1 Hour Ago</small>
+                              <small class="card-text">CNN Indonesia</small>
+                         </div>
+                    </div>
+                    <div class="news-card">
+                         <div class="news-image"> </div>
                          <div class="news-card-title">
                               <h2 class="title-text">News Title Lorem Ipsum Dolor Sit Amet</h2>
                          </div>
@@ -75,18 +85,6 @@
                               <small class="card-text">CNN Indonesia</small>
                          </div>
                     </div>
-                    <div class="news-card">
-                         <div class="news-image"></div>
-                         <div class="news-card-title">
-                              <h2 class="title-text">News Title Lorem Ipsum Dolor Sit Amet</h2>
-                         </div>
-                         <div class="news-card-timeline">
-                              <small class="card-text">1 Hour Ago</small>
-                              <small class="card-text">CNN Indonesia</small>
-                         </div>
-                    </div>
-               </div>
-               <div class="news-card-box">
                     <div class="news-card">
                          <div class="news-image"></div>
                          <div class="news-card-title">
@@ -130,6 +128,9 @@
                </div>
           </section>
      </main>
+     <footer id="footer">
+          <p>Copyright 2021 News Portal</p>
+     </footer>
      <script src="index.js"></script>
 </body>
 </html>
