Made even more changes

--- a/news.html
+++ b/news.html
@@ -5,7 +5,7 @@
      <meta http-equiv="X-UA-Compatible" content="IE=edge">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <title>News Portal Template</title>
-     <link rel="stylesheet" href="styles.css">
+     <link rel="stylesheet" href="news.css">
 </head>
 <body>
      <header id="header">
@@ -19,27 +19,23 @@
                </div>
           </nav>
 
-          <div id="hero">
-               <div id="heading-box">
-                    <h1 id="heading">Hot Topics</h1>
+          <div id="news-title">
+               <div class="news-title-heading">
+                    <h1>News Title Lorem Ipsum Dolor Sit Amet</h1>
                </div>
-               <div id="details">
-                    <div id="hot-topics">
-                         <div class="news-report">
-                              <h1 class="text-details">Massa tortor nibh nulla condimentum imperdiet scelerisque...</h1>
-                         </div>
-                         <div class="news-details">
-                              <small class="text">2 Hours ago</small>
-                              <small class="text">CNN Indonesia</small>
-                         </div>
-                    </div>
-                    <div id="text-details">
-                         <p><span class="bold">Nisi</span>, sagittis aliquet sit rutrum. Nunc, id vestibulum quam ornare adipiscing. Pellentesque sed turpis nunc gravida pharetra, sit nec vivamus pharetra. Velit, dui, egestas nisi, elementum mattis mauris, magnis. Massa tortor nibh nulla condimentum imperdiet scelerisque... read more</p>
-                    </div>
+               <div class="text-content">
+                    <small class="text">1 Hour ago</small>
+                    <small class="text">CNN Indonesia</small>
                </div>
+               <div class="news-title-image"></div>
           </div>
      </header>
      <main id="news-content">
+          <section id="news-article">
+               <article id="text-details">
+                    <p><span class="bold">Nisi</span>, sagittis aliquet sit rutrum. Nunc, id vestibulum quam ornare adipiscing. Pellentesque sed turpis nunc gravida pharetra, sit nec vivamus pharetra. Velit, dui, egestas nisi,Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis, placeat corporis repellendus voluptates aspernatur amet accusantium necessitatibus, voluptatum at, harum esse ducimus ipsam magni voluptatibus repudiandae repellat dolore nemo. Cum ipsam corporis ea magni ut soluta nihil odit ullam sint a illo, inventore quas dolore placeat dolor aut quasi quia. elementum mattis mauris, magnis. Massa tortor nibh nulla condimentum imperdiet scelerisque... <a href="#" class="story">read more</a></p>
+               </article>
+          </section>
           <section id="news-card-container">
                <div class="news-heading">
                     <h1 class="latest-news">Latest News</h1>
