--- a/news.html
+++ b/news.html
@@ -13,9 +13,10 @@
                <div id="logo">
                     <h3 class="heading"><span>News</span> Portal</h3>
                </div>
+
                <div class="icons">
-                    <img src="images/search.svg" alt="" class="search-button">
-                    <img src="images/bars.svg" alt="" class="search-button">
+                    <img src="images/search.svg" alt="" class="button">
+                    <img src="images/bars.svg" alt="" class="button">
                </div>
           </nav>
 
@@ -42,7 +43,9 @@
                </div>
                <div class="news-card-group">
                     <div class="news-card">
-                         <div class="news-image"></div>
+                         <div class="news-image">
+                              <img src="images/fencing.jpg" alt="" class="image">
+                         </div>
                          <div class="news-card-title">
                               <h2 class="title-text"><a href="news.html"> News Title Lorem Ipsum Dolor Sit Amet</a></h2>
                          </div>
@@ -52,7 +55,11 @@
                          </div>
                     </div>
                     <div class="news-card">
-                         <div class="news-image"> </div>
+                         <div class="news-image">
+                              <div class="news-image">
+                                   <img src="images/race.jpg" alt="" class="image">
+                              </div>
+                         </div>
                          <div class="news-card-title">
                               <h2 class="title-text"><a href=""> News Title Lorem Ipsum Dolor Sit Amet</a></h2>
                          </div>
@@ -62,7 +69,9 @@
                          </div>
                     </div>
                     <div class="news-card">
-                         <div class="news-image"></div>
+                         <div class="news-image">
+                              <img src="images/swimmer.jpg" alt="" class="image">
+                         </div>
                          <div class="news-card-title">
                               <h2 class="title-text"><a href=""> News Title Lorem Ipsum Dolor Sit Amet</a></h2>
                          </div>
@@ -72,7 +81,9 @@
                          </div>
                     </div>
                     <div class="news-card">
-                         <div class="news-image"></div>
+                         <div class="news-image">
+                              <img src="images/swim.jpg" alt="" class="image">
+                         </div>
                          <div class="news-card-title">
                               <h2 class="title-text"><a href=""> News Title Lorem Ipsum Dolor Sit Amet</a></h2>
                          </div>
@@ -82,7 +93,9 @@
                          </div>
                     </div>
                     <div class="news-card">
-                         <div class="news-image"></div>
+                         <div class="news-image">
+                              <img src="images/bike-blur.jpg" alt="" class="image">
+                         </div>
                          <div class="news-card-title">
                               <h2 class="title-text"><a href=""> News Title Lorem Ipsum Dolor Sit Amet</a></h2>
                          </div>
@@ -92,7 +105,9 @@
                          </div>
                     </div>
                     <div class="news-card">
-                         <div class="news-image"></div>
+                         <div class="news-image">
+                              <img src="images/ball.jpg" alt="" class="image">
+                         </div>
                          <div class="news-card-title">
                               <h2 class="title-text"><a href=""> News Title Lorem Ipsum Dolor Sit Amet</a></h2>
                          </div>
@@ -102,7 +117,9 @@
                          </div>
                     </div>
                     <div class="news-card">
-                         <div class="news-image"></div>
+                         <div class="news-image">
+                              <img src="images/swims.jpg" alt="" class="image">
+                         </div>
                          <div class="news-card-title">
                               <h2 class="title-text"><a href=""> News Title Lorem Ipsum Dolor Sit Amet</a></h2>
                          </div>
@@ -112,7 +129,9 @@
                          </div>
                     </div>
                     <div class="news-card">
-                         <div class="news-image"></div>
+                         <div class="news-image">
+                              <img src="images/biker.jpg" alt="" class="image">
+                         </div>
                          <div class="news-card-title">
                               <h2 class="title-text"><a href=""> News Title Lorem Ipsum Dolor Sit Amet</a></h2>
                          </div>
@@ -127,6 +146,5 @@
      <footer id="footer">
           <p>Copyright 2021 News Portal</p>
      </footer>
-     <script src="index.js"></script>
 </body>
 </html>
