Made finishing touches to inprove responsiveness

--- a/news.html
+++ b/news.html
@@ -14,7 +14,7 @@
                     <h3 class="heading"><span>News</span> Portal</h3>
                </div>
 
-               <div class="icons">
+               <div class="search-box">
                     <img src="images/search.svg" alt="" class="button">
                     <img src="images/bars.svg" alt="" class="button">
                </div>
