--- a/index.html
+++ b/index.html
@@ -13,11 +13,15 @@
                <div id="logo">
                     <h3 class="heading"><span>News</span> Portal</h3>
                </div>
-               <div class="icons">
+               <div class="search-box">
                     <input type="text" id="search">
-                    <img class="button search" src="images/search.svg" alt="" class="search-button">
-                    <img src="images/bars.svg" alt="" class="button bars">
+                    <button class="search-button button">
+                         <img src="images/search.svg" alt="">
+                    </button>
                </div>
+               <button class="button bars">
+                    <img src="images/bars.svg" alt="">
+               </button>
           </nav>
 
           <div id="news-headline">
@@ -46,6 +50,18 @@
                     <h1 class="latest-news">Latest News</h1>
                </div>
                <div class="news-card-group">
+                    <div class="news-card">
+                         <div class="news-image">
+                              <img src="${urlToImage}" alt="photo" class="image">
+                         </div>
+                         <div class="news-card-title">
+                              <h2 class="title-text"><a target=_blank href="${url}">${title}</a></h2>
+                         </div>
+                         <div class="news-card-timeline">
+                              <small class="card-text">${publishedAt}</small>
+                              <small class="card-text">${source.name}</small>
+                          </div>
+                    </div>
                </div>
           </section>
           <section id="search-list">
