Refactor my code with async/await

--- a/index.html
+++ b/index.html
@@ -49,20 +49,7 @@
                <div class="news-heading">
                     <h1 class="latest-news">Latest News</h1>
                </div>
-               <div class="news-card-group">
-                    <div class="news-card">
-                         <div class="news-image">
-                              <img src="${urlToImage}" alt="photo" class="image">
-                         </div>
-                         <div class="news-card-title">
-                              <h2 class="title-text"><a target=_blank href="${url}">${title}</a></h2>
-                         </div>
-                         <div class="news-card-timeline">
-                              <small class="card-text">${publishedAt}</small>
-                              <small class="card-text">${source.name}</small>
-                          </div>
-                    </div>
-               </div>
+               <div class="news-card-group"></div>
           </section>
           <section id="search-list">
                <h3 id="total-results">Search results for, total results()</h3>
